[package]
name = "mdtrans"
version = "0.1.6"
edition = "2021"
description = "Markdown parser and transformer using `pest.rs`, focused on flexibility to a project's needs"
repository = "https://github.com/litchipi/mdtrans"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
# pest = "2.7.7"
# pest_derive = "2.7.7"
# thiserror = "1.0.56"
